--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -5,4 +5,5 @@ resource_registry:
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::Controller: controller.yaml
+  OS::TripleO::Controller::SoftwareConfig: controller-config.yaml
   OS::TripleO::ObjectStorage: swift-storage.yaml
