--- a/ssl-source.yaml
+++ b/ssl-source.yaml
@@ -21,53 +21,34 @@ resources:
       group: os-apply-config
       config:
         ssl:
-          ca_certificate:
-            get_input: ssl_ca_certificate
+          ca_certificate: {get_input: ssl_ca_certificate}
         stunnel:
-          cert:
-            get_input: ssl_certificate
-          key:
-            get_input: ssl_key
-          cacert:
-            get_input: ssl_ca_certificate
+          cert: {get_input: ssl_certificate}
+          key: {get_input: ssl_key}
+          cacert: {get_input: ssl_ca_certificate}
+          connect_host: {get_input: controller_host}
           ports:
            - name: 'ec2'
              accept: 13773
              connect: 8773
-             connect_host:
-               get_input: controller_host
            - name: 'image'
              accept: 13292
              connect: 9292
-             connect_host:
-               get_input: controller_host
            - name: 'identity'
              accept: 13000
              connect: 5000
-             connect_host:
-               get_input: controller_host
            - name: 'network'
              accept: 13696
              connect: 9696
-             connect_host:
-               get_input: controller_host
            - name: 'compute'
              accept: 13774
              connect: 8774
-             connect_host:
-               get_input: controller_host
            - name: 'swift-proxy'
              accept: 13080
              connect: 8080
-             connect_host:
-               get_input: controller_host
            - name: 'cinder'
              accept: 13776
              connect: 8776
-             connect_host:
-               get_input: controller_host
            - name: 'ceilometer'
              accept: 13777
              connect: 8777
-             connect_host:
-               get_input: controller_host
