Fix empty local_ip in ml2_conf.ini on undercloud
empty local_ip in ml2_conf.ini would make neutron-openvswitch-agent
fail to start, then fail to bridge dhcp to br-ctlplane and pxe boot an
overcloud, so provide the value in undercloud-source.yaml.

Related-Bug: #1394956

Change-Id: If3a94b9c2b971ceb7601f91a2db64989960fb5d3

--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -315,6 +315,8 @@ resources:
           host: 127.0.0.1
           ovs_db: mysql://neutron:unset@localhost/ovs_neutron?charset=utf8
           ovs:
+            local_ip:
+              get_input: controller_host
             public_interface:
               get_param: NeutronPublicInterface
             public_interface_raw_device:
