Add Ceph related templates needed to configure Cinder with Ceph
The new ceph-source.yaml file provides the config settings needed
by the elements which configure Ceph on controllers (monitors) and
storage nodes (OSDs) as well as the Cinder backend which uses it.

There is also a without-mergepy copy named ceph-storage.yaml

Change-Id: I954861536c41b2a7e6cbd86a0f0b55004eed4c70

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -194,7 +194,18 @@ parameters:
     description: The user password for SNMPd with readonly rights running on all Overcloud nodes
     type: string
     hidden: true
-
+  CephClusterFSID:
+    default: ''
+    type: string
+    description: The Ceph cluster FSID.
+  CephMonKey:
+    default: ''
+    description: The Ceph monitors key.
+    type: string
+  CephAdminKey:
+    default: ''
+    description: The Ceph admin client key.
+    type: string
 
   # Controller-specific params
   AdminToken:
@@ -468,6 +479,18 @@ parameters:
     default: overcloud-swift-storage
     type: string
 
+# Ceph storage specific parameters
+  CephStorageCount:
+    type: number
+    default: 0
+  CephStorageImage:
+    default: overcloud-ceph-storage
+    type: string
+  OvercloudCephStorageFlavor:
+    default: baremetal
+    description: Flavor for Ceph storage nodes to request when deploying.
+    type: string
+
 resources:
 
   Controller:
@@ -630,6 +653,20 @@ resources:
           Replicas: { get_param: SwiftReplicas}
           NtpServer: {get_param: NtpServer}
 
+  CephStorage:
+    type: OS::Heat::ResourceGroup
+    properties:
+      count: {get_param: CephStorageCount}
+      resource_def:
+        type: OS::TripleO::CephStorage
+        properties:
+          Image: {get_param: CephStorageImage}
+          KeyName: {get_param: KeyName}
+          Flavor: {get_param: OvercloudCephStorageFlavor}
+          CephClusterFSID: {get_param: CephClusterFSID}
+          CephMonKey: {get_param: CephMonKey}
+          CephAdminKey: {get_param: CephAdminKey}
+          CephMonitors: {get_attr: [Controller, corosync_node]}
 
   allNodesConfig:
     type: OS::Heat::StructuredConfig
@@ -651,6 +688,9 @@ resources:
             - list_join:
               - "\n"
               - {get_attr: [ObjectStorage, hosts_entry]}
+            - list_join:
+              - "\n"
+              - {get_attr: [CephStorage, hosts_entry]}
         rabbit:
           nodes:
             list_join:
