--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -5,6 +5,7 @@ resource_registry:
   OS::TripleO::Controller: controller-puppet.yaml
   OS::TripleO::ObjectStorage: swift-storage-puppet.yaml
   OS::TripleO::Net::SoftwareConfig: net-config-bridge.yaml
+  OS::TripleO::CephStorage: ceph-storage-puppet.yaml
 
 # NOTE(dprince): requires a new release of python-heatclient
 #default_parameters:
