--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -5,3 +5,4 @@ resource_registry:
   OS::TripleO::Controller: controller.yaml
   OS::TripleO::ObjectStorage: swift-storage.yaml
   OS::TripleO::Net::SoftwareConfig: net-config-noop.yaml
+  OS::TripleO::CephStorage: ceph-storage.yaml
