--- a/controller.yaml
+++ b/controller.yaml
@@ -578,6 +578,7 @@ resources:
               options:
                 - timeout client 0
                 - timeout server 0
+                - maxconn 1500
 
   ControllerPassthroughConfig:
     type: OS::Heat::StructuredConfig
