--- a/overcloud-source.yaml
+++ b/overcloud-source.yaml
@@ -835,6 +835,7 @@ resources:
               options:
                 - timeout client 0
                 - timeout server 0
+                - maxconn 1500
   controllerPassthrough:
     type: OS::Heat::StructuredConfig
     properties:
