Set default network interfaces to nic1
Now that we are using os-net-config we can make use of
the nic naming abstraction layer where the actual physical
nic name is mapped automatically.

This change removes all the eth0 references and replaces
them with nic1 which should make it more likely
that these default values would actually work on
some distributions.

It also removes the single instance of eth2 in the
undercloud-bm-nova-deploy.yaml template and replaces
it with nic1 as well. Underclouds aren't a special case
in this regard (I run my bare metal undercloud on em1)
so there is no good reason to default to the second nic.

Change-Id: I3ea92a502bc4b8789f74913f232ac8bc6b843008

--- a/compute.yaml
+++ b/compute.yaml
@@ -148,7 +148,7 @@ parameters:
     description: An OVS bridge to create for accessing external networks.
     type: string
   NeutronPublicInterface:
-    default: eth0
+    default: nic1
     description: A port to add to the NeutronPhysicalBridge.
     type: string
   NeutronTunnelTypes:
