Remove default flavor from every template
With the push to using the new setup-flavors provided by
os-cloud-config, the default flavor will no longer be called
'baremetal', and Heat will always validate the default even if it
is overridden. To that end, remove the default flavor from every
flavor definition. Just to be certain, also add a custom_constraint
to every flavor definition that was missing it.

Change-Id: I24251e73be4e86738857f73b89499f592c4908de

--- a/block-storage-nfs.yaml
+++ b/block-storage-nfs.yaml
@@ -5,9 +5,10 @@ parameters:
     type: string
     default: overcloud-cinder-volume
   OvercloudBlockStorageFlavor:
-    default: baremetal
     description: Flavor for block storage nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
 resources:
   BlockStorageAccessPolicy:
     type: OS::Heat::AccessPolicy
