--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -190,7 +190,6 @@ parameters:
     constraints:
       - custom_constraint: glance.image
   OvercloudControlFlavor:
-    default: baremetal
     description: Flavor for control nodes to request when deploying.
     type: string
     constraints:
@@ -404,7 +403,6 @@ parameters:
   OvercloudComputeFlavor:
     description: Use this flavor
     type: string
-    default: baremetal
     constraints:
       - custom_constraint: nova.flavor
 
@@ -416,18 +414,20 @@ parameters:
     default: overcloud-cinder-volume
     type: string
   OvercloudBlockStorageFlavor:
-    default: baremetal
     description: Flavor for block storage nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
 
 # Object storage specific parameters
   ObjectStorageCount:
     type: number
     default: 0
   OvercloudSwiftStorageFlavor:
-    default: baremetal
     description: Flavor for Swift storage nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   SwiftStorageImage:
     default: overcloud-swift-storage
     type: string
