--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -2,9 +2,10 @@ heat_template_version: 2013-05-23
 description: 'Common Swift Storage Configuration'
 parameters:
   OvercloudSwiftStorageFlavor:
-    default: baremetal
     description: Flavor for Swift storage nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   SwiftReplicas:
     type: number
     default: 1
