--- a/swift-storage.yaml
+++ b/swift-storage.yaml
@@ -43,9 +43,10 @@ parameters:
         }
     type: json
   Flavor:
-    default: baremetal
     description: Flavor for Swift storage nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   HashSuffix:
     default: unset
     description: A random string to be used as a salt when hashing to determine mappings
