--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -74,9 +74,10 @@ parameters:
         }
     type: json
   Flavor:
-    default: baremetal
     description: Flavor to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   GlanceLogFile:
     description: The filepath of the file to use for logging messages from Glance.
     type: string
