--- a/cinder-storage.yaml
+++ b/cinder-storage.yaml
@@ -62,9 +62,10 @@ parameters:
         }
     type: json
   Flavor:
-    default: baremetal
     description: Flavor for block storage nodes to request when deploying.
     type: string
+    constraints:
+      - custom_constraint: nova.flavor
   GlancePort:
     default: "9292"
     description: Glance port.
