--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -192,7 +192,8 @@ parameters:
   OvercloudComputeFlavor:
     description: Use this flavor
     type: string
-    default: baremetal
+    constraints:
+      - custom_constraint: nova.flavor
   RabbitHost:
     type: string
   RabbitUserName:
