Align the cinder-storage.yaml template with block-storage.yaml
Change-Id: I00af10e07feed6c9c97ee6cad545dbff88cd6afc

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -574,7 +574,7 @@ resources:
           CinderISCSIHelper: {get_param: CinderISCSIHelper}
           CinderLVMLoopDeviceSize: {get_param: CinderLVMLoopDeviceSize}
           CinderPassword: {get_param: CinderPassword}
-          ControllerIP: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
+          VirtualIP: {get_attr: [ControlVirtualIP, fixed_ips, 0, ip_address]}
           KeyName: {get_param: KeyName}
           NeutronEnableTunnelling: {get_param: NeutronEnableTunnelling}
           NeutronNetworkType: {get_param: NeutronNetworkType}
